<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left|right"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connTypeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conn_type" />

        <RadioGroup
            android:id="@+id/connTypeRadioGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">
            
            <RadioButton
                android:id="@+id/wifiRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/blueToothRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth" />
        </RadioGroup>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/desktopTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desk_name" /> 
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       
        <Spinner
            android:id="@+id/desktopsSpinner"
            android:gravity="left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:prompt="@string/desktop_prompt"/>

        <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	        <Button
	            android:id="@+id/editButt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/edit" />

	        <Button
	            android:id="@+id/newButt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:text="@string/add_new" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sound_layout"  
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/muteButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/unmuted" />

        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/volumeSeekBar" >
	        
	        <view class="com.soundroid.ui.UI$EqualiserView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
	        
        </LinearLayout>

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scale"
            android:layout_alignParentLeft="true" />

        <TableLayout
            android:id="@+id/scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="75" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="100" />
    </RelativeLayout>

</LinearLayout>